<resources>
    <string name="app_name">Calculator</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="modulus">%</string>
    <string name="exponents">n^</string>
    <string name="log">log</string>
    <string name="root">n√</string>
    <string name="reciprocal">x^-1</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="backspace">⌫</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name="decimal">.</string>
    <string name="division">÷</string>
    <string name="doublezero">00</string>
</resources>