<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <LinearLayout
        android:id="@+id/textviewholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/equationview"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/black"
            android:fontFamily="@font/digital"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="30sp"></TextView>

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/black"
            android:fontFamily="@font/digital"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="80sp"
            android:textColor="@color/white">
            </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/log"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/log"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/yellow"
                >

            </Button>

            <Button
                android:id="@+id/root"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/root"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/yellow">

            </Button>

            <Button
                android:id="@+id/seven"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/seven"
                android:textAllCaps="false"
                android:textSize="20sp">

            </Button>

            <Button
                android:id="@+id/four"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/four"
                android:textAllCaps="false"
                android:textSize="20sp">

            </Button>

            <Button
                android:id="@+id/one"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/one"
                android:textAllCaps="false"
                android:textSize="20sp">

            </Button>

            <Button
                android:id="@+id/doublezero"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/doublezero"
                android:textAllCaps="false"
                android:textSize="20sp">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/mod"
                android:textColor="@color/yellow"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/modulus"
                android:textAllCaps="false"
                android:textSize="20sp">

            </Button>

            <Button
                android:id="@+id/open"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/open"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/eight"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/eight"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/five"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/five"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/two"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/two"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/zero"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/zero"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/clear"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/yellow"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/exponent"
                android:textColor="@color/yellow"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/exponents"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/close"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/nine"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/nine"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/six"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/six"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/three"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/three"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/decimal"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/decimal"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/backspace"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:textColor="@color/yellow"
                android:text="@string/backspace"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/reciprocal"
                android:textColor="@color/yellow"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/reciprocal"
                android:textAllCaps="false"
                android:textSize="17sp">

            </Button>

            <Button
                android:id="@+id/division"
                android:textColor="@color/yellow"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/division"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/multiply"
                android:textColor="@color/yellow"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/multiply"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/minus"
                android:textColor="@color/yellow"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/minus"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/add"
                android:textColor="@color/yellow"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

            <Button
                android:id="@+id/equal"
                android:textColor="@color/yellow"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/equal"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>